# lucida-downloader

./: .gitignore  Cargo.toml  artist.txt
scripts/: fetch_page.py  fetch_with_browser.py
src/: browser.rs  browser_cookies.rs  browser_pool.rs  bypass.rs  downloaders.rs  main.rs  models.rs  requests.rs  text_utils.rs  workers.rs
