[package]
name = "lucida-downloader"
version = "0.8.0"
edition = "2024"

[[bin]]
name = "lucida"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
futures = "0.3"
headless_chrome = "1.0.22"
json5 = "1.3"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "cookies", "json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1"
serde_json = "1.0"
time = { version = "0.3", features = ["parsing", "serde"] }
tokio = { version = "1.52", features = ["fs", "macros", "rt", "signal"] }
